# todoapp_with_hypermedia_api

./: .gitignore  Dockerfile  create_new_app.bash  create_new_app.sh  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/templates/: base.html
src/todo/: urls.py
