[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Filip"]
readme = "README.md"
packages = [{include = "config", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
libsass = "^0.22.0"
django-compressor = "^4.3.1"
django-sass-processor = "^1.2.2"
playwright = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
